--- a/jrxml_reports/custom_reports/ecosoft_account_invoice.jrxml
+++ b/jrxml_reports/custom_reports/ecosoft_account_invoice.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Invoice" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.3636363636363749"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="102"/>
+	<property name="ireport.x" value="170"/>
+	<property name="ireport.y" value="16"/>
 	<property name="OPENERP_RELATIONS" value="[&quot;invoice_line&quot;]"/>
 	<style name="table" lineSpacing="Single">
 		<box topPadding="2" leftPadding="1" bottomPadding="1" rightPadding="1">
@@ -165,13 +165,13 @@
 				<text><![CDATA[บริษัท อีโคซอฟต์ จำกัด]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="19" width="461" height="40"/>
+				<reportElement x="0" y="19" width="555" height="40"/>
 				<textElement lineSpacing="Single">
-					<font fontName="Monospaced" size="9" isBold="false" pdfFontName="Garuda-Bold.ttf" pdfEncoding="Identity-H" isPdfEmbedded="false"/>
+					<font fontName="Monospaced" size="8" isBold="false" pdfFontName="Garuda-Bold.ttf" pdfEncoding="Identity-H" isPdfEmbedded="false"/>
 				</textElement>
 				<text><![CDATA[ECOSOFT CO., LTD.
-29/24 ซอยเทียนทะเล 7  ถนนบางขุนเทียน-ชายทะเล แขวงแสมดำ เขตบางขุนเทียน กรุงเทพฯ 10150
-29/24 Tien Talay 7, Bangkhuntien-Chaitalay Road, Samaedum, Bangkhuntien, Bangkok Thailand 10150]]></text>
+ชั้น 37 อาคารสาทร สแควร์ ห้อง S-02 เลขที่ 98 ถนนสาทรเหนือ แขวงสีลม เขตบางรัก กรุงเทพฯ ประเทศไทย 10500
+37th Floor Sathorn Square Tower, Room S-02, 98 North Sathorn Road, Silom, Bangrak, Bangkok, Thailand 10500]]></text>
 			</staticText>
 			<image>
 				<reportElement x="493" y="0" width="60" height="59"/>
