--- a/jrxml_reports/custom_reports/ecosoft_receipt_copy.jrxml
+++ b/jrxml_reports/custom_reports/ecosoft_receipt_copy.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Invoice" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.3636363636363653"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="32"/>
 	<property name="OPENERP_RELATIONS" value="[&quot;invoice_line&quot;]"/>
 	<style name="table" lineSpacing="Single">
 		<box topPadding="2" leftPadding="1" bottomPadding="1" rightPadding="1">
@@ -199,7 +199,7 @@ order by ai.id, ail.sequence]]>
 					<text><![CDATA[1. Cheque: Bank______________ Branch______________ Number______________ Date______________ Amount______________
 2. Transfer: From Bank______________ Branch______________ Date______________ Amount______________
 to 2.1 Standard Chartered Bank (Thai) PCL. Head Office (Sathorn). Account number 001 008 17815 or
-    2.2 Kasikorn Bank, Central Rama 3. Account number 748 2 64808 2
+    2.2 Kasikorn Bank, Sathorn Square. Account number 616 2 09861 4
 3. Cash: Date______________ Amount______________]]></text>
 				</staticText>
 				<staticText>
@@ -327,7 +327,7 @@ RECEIPT/TAX INVOICE]]></text>
 					<font fontName="Monospaced" size="8" isBold="false" pdfFontName="Garuda-Bold.ttf" pdfEncoding="Identity-H" isPdfEmbedded="false"/>
 				</textElement>
 				<text><![CDATA[email: info@ecosoft.co.th
-Tel: +66 8 13415625]]></text>
+Tel: +66 (0) 2 105 6494]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="124" width="123" height="15"/>
@@ -337,14 +337,14 @@ Tel: +66 8 13415625]]></text>
 				<text><![CDATA[ลูกค้า/Client:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="138" width="200" height="15"/>
+				<reportElement x="0" y="138" width="282" height="15"/>
 				<textElement lineSpacing="Single">
 					<font fontName="Monospaced" size="9" pdfFontName="Garuda.ttf" pdfEncoding="Identity-H"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{partner_name}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="152" width="200" height="32"/>
+				<reportElement x="0" y="152" width="234" height="37"/>
 				<textElement lineSpacing="Single">
 					<font fontName="Monospaced" size="9" pdfFontName="Garuda.ttf" pdfEncoding="Identity-H"/>
 				</textElement>
@@ -384,7 +384,7 @@ Tel: +66 8 13415625]]></text>
 				<textElement lineSpacing="Single">
 					<font fontName="Monospaced" size="10" isBold="true" pdfFontName="Garuda-Bold.ttf" pdfEncoding="Identity-H" isPdfEmbedded="false"/>
 				</textElement>
-				<text><![CDATA[Tax ID. 0105554048641]]></text>
+				<text><![CDATA[Tax ID. 0105554048641 สำนักงานใหญ่]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="436" y="88" width="119" height="20" forecolor="#80C243"/>
@@ -422,7 +422,7 @@ Tel: +66 8 13415625]]></text>
 				<text><![CDATA[TAX ID : ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="2" y="138" width="553" height="28" forecolor="#FF1300"/>
+				<reportElement x="2" y="139" width="553" height="28" forecolor="#FF1300"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
