--- a/jrxml_reports/custom_reports/ecosoft_sale_order.jrxml
+++ b/jrxml_reports/custom_reports/ecosoft_sale_order.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Purchase Order" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.2396694214876123"/>
-	<property name="ireport.x" value="94"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.zoom" value="1.6500000000000126"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="206"/>
 	<property name="OPENERP_RELATIONS" value="[&quot;order_line&quot;]"/>
 	<style name="table" lineSpacing="Single">
 		<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
@@ -123,7 +123,7 @@
 	<field name="product_uom_qty" class="java.lang.Number">
 		<fieldDescription><![CDATA[order_line/product_uom_qty]]></fieldDescription>
 	</field>
-	<group name="PO" isStartNewPage="true">
+	<group name="PO" isStartNewPage="true" footerPosition="StackAtBottom">
 		<groupExpression><![CDATA[$F{id}]]></groupExpression>
 		<groupFooter>
 			<band height="15">
@@ -141,9 +141,6 @@
 					</textElement>
 					<textFieldExpression class="java.lang.Number"><![CDATA[$F{Untaxed_Amount-amount_untaxed}]]></textFieldExpression>
 				</textField>
-				<line>
-					<reportElement x="0" y="-1" width="451" height="1"/>
-				</line>
 			</band>
 			<band height="30">
 				<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} > 0]]></printWhenExpression>
@@ -290,7 +287,58 @@ Yours faithfully]]></text>
 		</groupFooter>
 	</group>
 	<background>
-		<band splitType="Stretch"/>
+		<band height="802" splitType="Stretch">
+			<rectangle>
+				<reportElement mode="Transparent" x="0" y="234" width="39" height="278">
+					<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} == null || $F{Additional_Disc_Amt-add_disc_amt} == 0]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Transparent" x="451" y="234" width="104" height="278">
+					<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} == null || $F{Additional_Disc_Amt-add_disc_amt} == 0]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Transparent" x="391" y="234" width="60" height="278">
+					<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} == null || $F{Additional_Disc_Amt-add_disc_amt} == 0]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Transparent" x="319" y="234" width="72" height="278">
+					<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} == null || $F{Additional_Disc_Amt-add_disc_amt} == 0]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Transparent" x="39" y="234" width="280" height="278">
+					<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} == null || $F{Additional_Disc_Amt-add_disc_amt} == 0]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Transparent" x="451" y="234" width="104" height="244">
+					<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} > 0]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Transparent" x="391" y="234" width="60" height="244">
+					<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} > 0]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Transparent" x="39" y="234" width="280" height="244">
+					<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} > 0]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Transparent" x="319" y="234" width="72" height="244">
+					<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} > 0]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<rectangle>
+				<reportElement mode="Transparent" x="0" y="234" width="39" height="244">
+					<printWhenExpression><![CDATA[$F{Additional_Disc_Amt-add_disc_amt} > 0]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+		</band>
 	</background>
 	<pageHeader>
 		<band height="209" splitType="Stretch">
@@ -318,7 +366,7 @@ Yours faithfully]]></text>
 					<font fontName="Monospaced" size="8" isBold="false" pdfFontName="Garuda-Bold.ttf" pdfEncoding="Identity-H" isPdfEmbedded="false"/>
 				</textElement>
 				<text><![CDATA[email: info@ecosoft.co.th
-Tel: +66 8 13415625]]></text>
+Tel: +66 (0) 2 105 6494]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="130" width="123" height="15"/>
@@ -328,14 +376,14 @@ Tel: +66 8 13415625]]></text>
 				<text><![CDATA[เรียน/Attention:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="144" width="200" height="15"/>
+				<reportElement x="0" y="144" width="523" height="15"/>
 				<textElement lineSpacing="Single">
 					<font fontName="Monospaced" size="9" pdfFontName="Garuda.ttf" pdfEncoding="Identity-H"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Name-name}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="158" width="200" height="34"/>
+				<reportElement x="0" y="158" width="252" height="51"/>
 				<textElement lineSpacing="Single">
 					<font fontName="Monospaced" size="9" pdfFontName="Garuda.ttf" pdfEncoding="Identity-H"/>
 				</textElement>
@@ -389,7 +437,7 @@ Tel: +66 8 13415625]]></text>
 				<textElement lineSpacing="Single">
 					<font fontName="Monospaced" size="10" isBold="true" pdfFontName="Garuda-Bold.ttf" pdfEncoding="Identity-H" isPdfEmbedded="false"/>
 				</textElement>
-				<text><![CDATA[Tax ID. 0105554048641]]></text>
+				<text><![CDATA[Tax ID. 0105554048641 สำนักงานใหญ่]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="19" width="555" height="40"/>
@@ -470,7 +518,7 @@ Quantity]]></text>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Description-name}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00;-#,##0.00" isBlankWhenNull="true">
-				<reportElement style="table_TD" stretchType="RelativeToTallestObject" mode="Transparent" x="319" y="-1" width="72" height="17" backcolor="#80C243"/>
+				<reportElement stretchType="RelativeToTallestObject" mode="Transparent" x="286" y="-1" width="105" height="17" backcolor="#80C243"/>
 				<textElement textAlignment="Right" verticalAlignment="Top" lineSpacing="Single">
 					<font fontName="Monospaced" size="9" pdfFontName="Garuda.ttf" pdfEncoding="Identity-H"/>
 				</textElement>
